--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link href="favicon.ico" rel="icon">
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <link rel="stylesheet" href="/src/css/style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
