--- a/public/index.html
+++ b/public/index.html
@@ -17,21 +17,63 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="font-sans font-[Roboto]" x-data="app()">
+<body class="font-sans font-[Roboto]" x-data="app()" @resize.window="isOpenMenuMobile = false, isOpenMenuMais = false">
 
-    <header class="flex bg-white shadow">
-        <img src="/public/assets/logo.png" alt="Liga Pernambucana de Direito Digital" title="Liga Pernambucana de Direito Digital" />
+    <header class="sticky top-0 z-50 text-blue-500 transition duration-300 ease-out bg-white border-b shadow-lg lg:duration-200">
+        <div class="container flex flex-row flex-wrap items-center justify-between px-6 py-6 mx-auto 2xl:px-0">
+            <a href="index.html" class="flex items-center font-medium text-gray-900 title-font md:mb-0" title="Liga Pernambucana de Direito Digital">
+                <img src="/public/assets/logo.webp" class="h-8 md:h-12" alt="Liga Pernambucana de Direito Digital" />
+            </a>
 
-        <nav>
-            <a href="#">Página principal</a>
-            <a href="#">Quem somos</a>
-            <a href="#">Professores</a>
-            <a href="#">Cronograma</a>
-            <a href="#">Consenso</a>
+            <nav class="flex-wrap items-center justify-center order-last w-full text-base text-center lg:order-none lg:w-auto lg:text-left lg:gap-x-2 lg:flex lg:-ml-16" :class="(!isOpenMenuMobile) ? 'hidden' : ''" x-cloak>
+                <div class="mt-6 lg:mt-0">
+                    <a href="index.html" class="p-4 text-white transition-colors duration-200 bg-blue-500 md:rounded-l-full" title="Ir para a página">Página principal</a>
+                </div>
+                <div class="mt-6 lg:mt-0">
+                    <a href="#" class="p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a página">Quem somos</a>
+                </div>
+                <div class="mt-6 lg:mt-0">
+                    <a href="#" class="p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a página">Professores</a>
+                </div>
+                <div class="mt-6 lg:mt-0">
+                    <a href="#" class="p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a página">Cronograma</a>
+                </div>
+                <div class="mt-6 lg:mt-0">
+                    <a href="#" class="p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a página">Consenso</a>
+                </div>
+                <div class="mt-6 lg:mt-0">
+                    <button type="button" class="inline-flex items-center p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500 group md:rounded-r-full" aria-expanded="false" @click="isOpenMenuMais = !isOpenMenuMais" @click.away="isOpenMenuMais = false">
+                        Mais
+                        <svg :class="(isOpenMenuMais) ? 'rotate-180 duration-300 text-blue-500' : 'duration-300'" class="w-5 h-5 ml-3 text-blue-500 group-hover:text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+                        </svg>
+                    </button>
 
-            <a href="#">Política de privacidade</a>
-            <a href="#">Lista de grupos</a>
-        </nav>
+                    <div class="absolute z-40 transform" x-show="isOpenMenuMais" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 scale-90" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="transition ease-in duration-200" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-90" x-cloak>
+                        <div class="flex flex-col overflow-hidden bg-white rounded-lg shadow">
+                            <a href="#" class="w-full p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a página">Política de privacidade</a>
+                            <a href="#" class="w-full p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a página">Lista de grupos</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="flex gap-x-12 lg:gap-x-0 justify-self-end">
+                <div class="flex items-center ml-2 lg:hidden">
+                    <button class="inline-flex items-center px-4 py-1 text-sm font-medium border-[0.7px] hover:text-cyan-500 border-transparent rounded focus:outline-none lg:mt-0 transition-colors duration-150" type="button" aria-controls="navbar-main" aria-expanded="false" aria-label="Alternar menu de navegação" @click="isOpenMenuMobile = !isOpenMenuMobile">
+                        <svg class="w-6 h-7" viewBox="0 0 28 21" fill="none" xmlns="http://www.w3.org/2000/svg" x-show="!isOpenMenuMobile">
+                            <path d="M0 1H28" stroke="currentColor" stroke-width="1.5" />
+                            <path d="M0 10.3334H28" stroke="currentColor" stroke-width="1.5" />
+                            <path d="M0 19.6666H28" stroke="currentColor" stroke-width="1.5" />
+                        </svg>
+                        <svg class="w-6 h-6 text-[#148EFF] hover:text-[#00AEFF]" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" x-show="isOpenMenuMobile" x-cloak>
+                            <path opacity="0.6" d="M17 1L1 17" stroke="currentColor" stroke-width="2" />
+                            <path d="M17 17L1 0.999999" stroke="currentColor" stroke-width="2" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
     </header>
 
     <section class="flex flex-col items-center justify-center px-20 text-white banner">
