--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
     </main>
 
     <footer class="py-8 text-white bg-blue-500">
-        <div class="container grid grid-cols-4 px-8 mx-auto md:px-0">
+        <div class="container grid grid-cols-4 px-8 mx-auto 2xl:px-0">
             <div class="flex flex-col col-span-4 lg:col-span-1 gap-y-2">
                 <h3 class="mt-6 text-base font-bold lg:mt-0 lg:mb-6">Sobre</h3>
                 <a href="#" class="text-sm hover:underline">Quem Somos</a>
