style: adiciona espaçamento horizontal ao banner da página inicial

--- a/public/index.html
+++ b/public/index.html
@@ -76,16 +76,18 @@
         </div>
     </header>
 
-    <section class="flex flex-col items-center justify-center px-20 text-white banner">
-        <h2 class="text-[40px] mb-16 z-10">Inscrições Abertas!</h2>
-        <div class="z-10 flex justify-between w-full">
-            <a href="#" class="text-3xl underline" target="_blank">Formulário para Curso de Direito</a>
-            <a href="#" class="text-3xl underline" target="_blank">Formulário para Demais Cursos</a>
-        </div>
-        <div class="flex justify-end w-full">
-            <div class="z-10 mt-28">
-                <h3 class="text-3xl">Seja bem-vindo ao Portal da Liga <br /> Pernambucana de Direito Digital</h3>
-                <p class="text-base">Aqui, você encontra tudo acerca de nossas atividades.</p>
+    <section class="flex flex-col text-white banner">
+        <div class="container flex flex-col items-center justify-center w-full px-6 py-12 mx-auto md:py-20 2xl:px-0">
+            <h2 class="text-[40px] mb-16 z-10">Inscrições Abertas!</h2>
+            <div class="z-10 flex justify-between w-full">
+                <a href="#" class="text-3xl underline" target="_blank">Formulário para Curso de Direito</a>
+                <a href="#" class="text-3xl underline" target="_blank">Formulário para Demais Cursos</a>
+            </div>
+            <div class="flex justify-end w-full">
+                <div class="z-10 mt-28">
+                    <h3 class="text-3xl">Seja bem-vindo ao Portal da Liga <br /> Pernambucana de Direito Digital</h3>
+                    <p class="text-base">Aqui, você encontra tudo acerca de nossas atividades.</p>
+                </div>
             </div>
         </div>
     </section>
