--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
     <section class="flex flex-col text-white banner">
         <div class="container flex flex-col items-center justify-center w-full px-6 py-12 mx-auto md:py-20 2xl:px-0">
             <h2 class="text-[40px] mb-16 z-10">Inscrições Abertas!</h2>
-            <div class="z-10 flex justify-between w-full">
+            <div class="z-10 flex flex-wrap justify-between w-full gap-y-4">
                 <a href="#" class="text-3xl underline" target="_blank">Formulário para Curso de Direito</a>
                 <a href="#" class="text-3xl underline" target="_blank">Formulário para Demais Cursos</a>
             </div>
