--- a/public/index.html
+++ b/public/index.html
@@ -78,12 +78,12 @@
 
     <section class="flex flex-col text-white banner">
         <div class="container flex flex-col items-center justify-center w-full px-6 py-12 mx-auto md:py-20 2xl:px-0">
-            <h2 class="text-[40px] mb-16 z-10">Inscrições Abertas!</h2>
-            <div class="z-10 flex flex-wrap justify-between w-full gap-y-4">
+            <h2 class="text-[40px] mb-16 z-10" x-show="isInscricoesAbertas">Inscrições Abertas!</h2>
+            <div class="z-10 flex flex-wrap justify-between w-full gap-y-4" x-show="isInscricoesAbertas">
                 <a href="#" class="text-3xl underline" target="_blank">Formulário para Curso de Direito</a>
                 <a href="#" class="text-3xl underline" target="_blank">Formulário para Demais Cursos</a>
             </div>
-            <div class="flex justify-end w-full">
+            <div class="flex w-full" :class="(isInscricoesAbertas) ? 'justify-end' : 'justify-center text-center'">
                 <div class="z-10 mt-28">
                     <h3 class="text-3xl">Seja bem-vindo ao Portal da Liga <br /> Pernambucana de Direito Digital</h3>
                     <p class="text-base">Aqui, você encontra tudo acerca de nossas atividades.</p>
