feat: importa novas configurações do browser

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,15 @@
     <meta name="author" content="Liga Pernambucana de Direito Digital">
     <title>Liga Pernambucana de Direito Digital</title>
 
-    <link href="favicon.ico" rel="icon">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="apple-touch-icon" sizes="76x76" href="/public/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/assets/favicon-16x16.png">
+    <link rel="manifest" href="/public/assets/site.webmanifest">
+    <link rel="mask-icon" href="/public/assets/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
 
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/src/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
