--- a/public/index.html
+++ b/public/index.html
@@ -33,19 +33,19 @@
 
             <nav class="flex-wrap items-center justify-center order-last w-full text-base text-center lg:order-none lg:w-auto lg:text-left lg:gap-x-2 lg:flex lg:-ml-16" :class="(!isOpenMenuMobile) ? 'hidden' : ''" x-cloak>
                 <div class="mt-6 lg:mt-0">
-                    <a href="/" class="p-4 text-white transition-colors duration-200 bg-blue-500 md:rounded-l-full" title="Ir para a página">Página principal</a>
+                    <a href="/" class="p-4 transition-colors duration-200 md:rounded-l-full" title="Ir para a página" :class="(atualSecao == '' || atualSecao == 'principal') ? 'bg-blue-500 text-white' : 'hover:text-white hover:bg-blue-500'">Página principal</a>
                 </div>
                 <div class="mt-6 lg:mt-0">
-                    <a href="#quem-somos" class="p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a seção">Quem somos</a>
+                    <a href="#quem-somos" class="p-4 transition-colors duration-200" title="Ir para a seção" :class="(atualSecao == 'quem-somos') ? 'bg-blue-500 text-white' : 'hover:text-white hover:bg-blue-500'">Quem somos</a>
                 </div>
                 <div class="mt-6 lg:mt-0">
-                    <a href="#professores" class="p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a seção">Professores</a>
+                    <a href="#professores" class="p-4 transition-colors duration-200" title="Ir para a seção" :class="(atualSecao == 'professores') ? 'bg-blue-500 text-white' : 'hover:text-white hover:bg-blue-500'">Professores</a>
                 </div>
                 <div class="mt-6 lg:mt-0">
-                    <a href="#cronograma" class="p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a seção">Cronograma</a>
+                    <a href="#cronograma" class="p-4 transition-colors duration-200" title="Ir para a seção" :class="(atualSecao == 'cronograma') ? 'bg-blue-500 text-white' : 'hover:text-white hover:bg-blue-500'">Cronograma</a>
                 </div>
                 <div class="mt-6 lg:mt-0">
-                    <button type="button" class="inline-flex items-center p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500 group md:rounded-r-full" aria-expanded="false" @click="isOpenMenuMais = !isOpenMenuMais" @click.away="isOpenMenuMais = false">
+                    <button type="button" class="inline-flex items-center p-4 transition-colors duration-200 group md:rounded-r-full" aria-expanded="false" @click="isOpenMenuMais = !isOpenMenuMais" @click.away="isOpenMenuMais = false">
                         Mais
                         <svg :class="(isOpenMenuMais) ? 'rotate-180 duration-300 text-blue-500' : 'duration-300'" class="w-5 h-5 ml-3 text-blue-500 group-hover:text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
@@ -54,8 +54,8 @@
 
                     <div class="absolute z-40 transform" x-show="isOpenMenuMais" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 scale-90" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="transition ease-in duration-200" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-90" x-cloak>
                         <div class="flex flex-col overflow-hidden bg-white rounded-lg shadow">
-                            <a href="breve.html" class="w-full p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a página">Política de privacidade</a>
-                            <a href="breve.html" class="w-full p-4 transition-colors duration-200 hover:text-white hover:bg-blue-500" title="Ir para a página">Lista de grupos</a>
+                            <a href="breve.html" class="w-full p-4 transition-colors duration-200" title="Ir para a página">Política de privacidade</a>
+                            <a href="breve.html" class="w-full p-4 transition-colors duration-200" title="Ir para a página">Lista de grupos</a>
                         </div>
                     </div>
                 </div>
@@ -80,6 +80,7 @@
     </header>
 
     <section class="flex flex-col text-white banner">
+        <a id="principal" class="ancora"></a>
         <div class="container flex flex-col items-center justify-center w-full px-6 py-12 mx-auto md:py-20 2xl:px-0">
             <h2 class="text-[40px] mb-16 z-10" x-show="isInscricoesAbertas">Inscrições Abertas!</h2>
             <div class="z-10 flex flex-wrap justify-between w-full gap-y-4" x-show="isInscricoesAbertas">
@@ -97,7 +98,7 @@
 
     <main class="container flex flex-col w-full px-6 py-12 mx-auto md:py-20 2xl:px-0">
         <section class="quem-somos">
-            <a id="quem-somos"></a>
+            <a id="quem-somos" class="ancora"></a>
             <h2 class="flex">
                 <span class="text-4xl text-blue-500 mr-9 -tracking-wider">Quem Somos</span>
                 <div class="barra flex-grow border-b-blue-500 border-b-[3px] h-8"></div>
@@ -109,7 +110,7 @@
         </section>
 
         <section class="mt-16 equipe">
-            <a id="professores"></a>
+            <a id="professores" class="ancora"></a>
             <h2 class="flex">
                 <span class="text-4xl text-blue-500 mr-9 -tracking-wider">Professores e Colaboradores</span>
                 <div class="barra flex-grow border-b-blue-500 border-b-[3px] h-8"></div>
@@ -152,7 +153,7 @@
         </section>
 
         <section class="mt-16 cronograma">
-            <a id="cronograma"></a>
+            <a id="cronograma" class="ancora"></a>
             <h2 class="flex">
                 <span class="text-4xl text-blue-500 mr-9 -tracking-wider">Cronograma de Atividades</span>
                 <div class="barra flex-grow border-b-blue-500 border-b-[3px] h-8"></div>
