chore: atualiza ícone para fechar menu de topo em mobile

--- a/public/index.html
+++ b/public/index.html
@@ -69,9 +69,8 @@
                             <path d="M0 10.3334H28" stroke="currentColor" stroke-width="1.5" />
                             <path d="M0 19.6666H28" stroke="currentColor" stroke-width="1.5" />
                         </svg>
-                        <svg class="w-6 h-6 text-[#148EFF] hover:text-[#00AEFF]" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" x-show="isOpenMenuMobile" x-cloak>
-                            <path opacity="0.6" d="M17 1L1 17" stroke="currentColor" stroke-width="2" />
-                            <path d="M17 17L1 0.999999" stroke="currentColor" stroke-width="2" />
+                        <svg class="w-6 h-6 text-blue-500 hover:text-blue-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" x-show="isOpenMenuMobile" x-cloak>
+                            <path fill-rule="evenodd" d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z" clip-rule="evenodd" />
                         </svg>
                     </button>
                 </div>
