--- a/public/index.html
+++ b/public/index.html
@@ -47,15 +47,15 @@
                 <div class="mt-6 lg:mt-0">
                     <button type="button" class="inline-flex items-center p-4 transition-colors duration-200 group md:rounded-r-full" aria-expanded="false" @click="isOpenMenuMais = !isOpenMenuMais" @click.away="isOpenMenuMais = false">
                         Mais
-                        <svg :class="(isOpenMenuMais) ? 'rotate-180 duration-300 text-[#3697ea]' : 'duration-300'" class="w-5 h-5 ml-3 text-[#3697ea] group-hover:text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <svg :class="(isOpenMenuMais) ? 'rotate-180 duration-300 text-[#3697ea]' : 'duration-300'" class="w-5 h-5 ml-3 text-[#3697ea] " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
                         </svg>
                     </button>
 
                     <div class="absolute z-40 transform" x-show="isOpenMenuMais" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 scale-90" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="transition ease-in duration-200" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-90" x-cloak>
                         <div class="flex flex-col overflow-hidden bg-white rounded-lg shadow">
-                            <a href="breve.html" class="w-full p-4 transition-colors duration-200" title="Ir para a página">Política de privacidade</a>
-                            <a href="breve.html" class="w-full p-4 transition-colors duration-200" title="Ir para a página">Lista de grupos</a>
+                            <a href="breve.html" class="w-full p-4 transition-colors duration-200 hover:text-white hover:bg-[#3697ea]" title="Ir para a página">Política de privacidade</a>
+                            <a href="breve.html" class="w-full p-4 transition-colors duration-200 hover:text-white hover:bg-[#3697ea]" title="Ir para a página">Lista de grupos</a>
                         </div>
                     </div>
                 </div>
