chore: especifica uma versão válida do Alpine.js

--- a/public/index.html
+++ b/public/index.html
@@ -216,7 +216,7 @@
         </div>
     </footer>
 
-    <script src="https://unpkg.com/alpinejs" defer></script>
+    <script src="https://unpkg.com/alpinejs@3.11.1/dist/cdn.min.js" defer></script>
     <script src="/src/js/scripts.js"></script>
 
 </body>
