feat: adiciona script de analytics Umami

--- a/public/breve.html
+++ b/public/breve.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#FFFFFF">
     <meta name="author" content="Liga Pernambucana de Direito Digital">
     <title>Liga Pernambucana de Direito Digital</title>
+
+    <script async defer data-website-id="29868ceb-31dc-421f-b304-ec2e83e72ce7" src="https://analytics-dc.vercel.app/umami.js"></script>
 </head>
 <body>
 
