--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+
+    <script async defer data-website-id="29868ceb-31dc-421f-b304-ec2e83e72ce7" src="https://analytics-dc.vercel.app/umami.js"></script>
 </head>
 <body class="font-sans font-[Roboto]" x-data="app()" @resize.window="isOpenMenuMobile=false,isOpenMenuMais=false">
 
