--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Portal da Liga Pernambucana de Direito Digital.">
-    <meta name="theme-color" content="#FFFFFF">
     <meta name="author" content="Liga Pernambucana de Direito Digital">
     <title>Liga Pernambucana de Direito Digital</title>
 
-    <link rel="apple-touch-icon" sizes="76x76" href="/public/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/public/assets/favicon-16x16.png">
-    <link rel="manifest" href="/public/assets/site.webmanifest">
-    <link rel="mask-icon" href="/public/assets/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+    <link rel="manifest" href="/assets/site.webmanifest">
+    <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#5bbad5">
 
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/src/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,12 +23,12 @@
 
     <script async defer data-website-id="29868ceb-31dc-421f-b304-ec2e83e72ce7" src="https://analytics-dc.vercel.app/umami.js"></script>
 </head>
-<body class="font-sans font-[Roboto]" x-data="app()" @resize.window="isOpenMenuMobile=false,isOpenMenuMais=false">
+<body class="font-sans" x-data="app()" @resize.window="isOpenMenuMobile=false,isOpenMenuMais=false">
 
     <header class="sticky top-0 z-50 text-[#3697ea] transition duration-300 ease-out bg-white border-b shadow-lg lg:duration-200">
         <div class="container flex flex-row flex-wrap items-center justify-between px-6 py-6 mx-auto 2xl:px-0">
             <a href="/" class="flex items-center font-medium text-gray-900 title-font md:mb-0" title="Liga Pernambucana de Direito Digital">
-                <img src="/public/assets/logo.webp" class="h-8 md:h-12" alt="Liga Pernambucana de Direito Digital" />
+                <img src="/assets/logo.webp" class="h-8 md:h-12" alt="Liga Pernambucana de Direito Digital" />
             </a>
 
             <nav class="flex-wrap items-center justify-center order-last w-full text-base text-center lg:order-none lg:w-auto lg:text-left lg:gap-x-2 lg:flex lg:-ml-16" :class="(!isOpenMenuMobile) ? 'hidden' : ''" x-cloak>
