--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="/assets/site.webmanifest">
     <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#5bbad5">
 
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -217,7 +217,7 @@
     </footer>
 
     <script src="https://unpkg.com/alpinejs@3.11.1/dist/cdn.min.js" defer></script>
-    <script src="/src/js/scripts.js"></script>
+    <script src="scripts.js"></script>
 
 </body>
 </html>
