style: corrige espaçamento horizontal da seção Quem somos

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
                 <span class="text-4xl text-[#3697ea] mr-9 -tracking-wider">Quem Somos</span>
                 <div class="barra flex-grow border-b-[#3697ea] border-b-[3px] h-8"></div>
             </h2>
-            <div class="py-12 font-serif text-lg prose text-justify text-gray-700">
+            <div class="py-12 font-serif text-lg text-justify text-gray-700">
                 <p class="indent-7">A Liga Pernambucana de Direito Digital é um grupo que reúne professores, estudantes, profissionais de todas as áreas do conhecimento para a realização de atividades de estudo, pesquisa e extensão na área de tecnologia e o seu relacionamento direto com direitos coletivos e individuais, bem como seu impacto na sociedade. Através da realização de atividades de estudo, pesquisa e extensão como palestras, workshops, hackatons, mutirões, seminários, eventos, etc.</p>
                 <p class="mt-6 indent-7">Através de atividades de pesquisa coordenada pelos nossos professores e com a ajuda de nossos colaboradores, a Liga proporciona um ambiente disruptivo, divertido e saudável para desenvolvimento, empreendimento e publicação de artigos científicos. Nossa metodologia de oportunizar que os alunos atuem nas atividades de ensino bem como colocando-os à frente das atividades de extensão acaba proporcionando capacitação e aprendizado aos seus participantes.</p>
             </div>
